Fingerprint unlock UX improvements

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -72,6 +72,11 @@
         <item name="elevation">0dp</item>
     </style>
 
+    <style name="TextSecure.FlatDarkActionBar"
+        parent="@style/TextSecure.DarkActionBar">
+        <item name="elevation">0dp</item>
+    </style>
+
     <style name="TextSecure.DarkActionBar.TabBar"
         parent="@style/Widget.AppCompat.ActionBar.TabBar">
         <item name="background">@color/gray95</item>
