--- a/res/layout/webrtc_call_controls.xml
+++ b/res/layout/webrtc_call_controls.xml
@@ -41,6 +41,7 @@
                 android:id="@+id/camera_flip_button"
                 style="@style/WebRtcCallCompoundButton"
                 android:contentDescription="@string/redphone_call_controls__flip_camera_rear"
-                android:background="@drawable/webrtc_camera_flip_button"/>
+                android:background="@drawable/webrtc_camera_rear_button"
+                android:visibility="gone"/>
 
 </merge>
