--- a/res/layout/fragment_search.xml
+++ b/res/layout/fragment_search.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:background="@color/white"
+        android:background="?attr/search_background"
         android:visibility="gone" />
 
     <android.support.v7.widget.RecyclerView
