--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -240,6 +240,7 @@
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.Fix</item>
 
         <item name="search_toolbar_background">@color/white</item>
+        <item name="search_background">@color/white</item>
         <item name="invite_background">@color/signal_primary</item>
     </style>
 
@@ -364,6 +365,7 @@
         <item name="group_members_dialog_icon">@drawable/ic_group_white_24dp</item>
         <item name="preferenceTheme">@style/PreferenceThemeOverlay.Fix</item>
         <item name="search_toolbar_background">@color/black</item>
+        <item name="search_background">@color/black</item>
         <item name="invite_background">@color/black</item>
     </style>
     
