Show a banner in the event of a service outage.
We will now determine if there has been a service outage and render a
banner at the top of the conversation list if we detect that there has
been one.

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -58,4 +58,7 @@
     <color name="transparent">#00FFFFFF</color>
 
     <color name="MediaOverview_Media_selected_overlay">#88000000</color>
+
+    <color name="core_red">#f44336</color>
+    <color name="core_red_highlight">#ef5350</color>
 </resources>
