--- a/res/layout/shared_contact_view.xml
+++ b/res/layout/shared_contact_view.xml
@@ -62,7 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/message_bubble_horizontal_padding"
             android:layout_marginRight="@dimen/message_bubble_horizontal_padding"
-            android:layout_marginTop="@dimen/message_bubble_footer_top_padding"
+            android:layout_marginTop="4dp"
             android:elevation="9dp"
             android:orientation="horizontal" />
 
@@ -78,7 +78,7 @@
             android:ellipsize="end"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/core_blue"
-            android:background="@drawable/shared_contact_button_background_alone"
+            android:background="?attr/shared_contact_item_button_color"
             android:foreground="?attr/selectableItemBackground"
             tools:text="Add to Contacts"/>
 
