--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -126,10 +126,15 @@
         <item name="alertDialogTheme">@style/AppCompatAlertDialogStyleLight</item>
         <item name="android:alertDialogTheme">@style/AppCompatDialogStyleLight</item>
         <!--<item name="android:windowContentOverlay">@drawable/compat_actionbar_shadow_background</item>-->
+
         <item name="attachment_type_selector_background">@color/white</item>
+        <item name="attachment_document_icon_small">@drawable/ic_document_small_light</item>
+        <item name="attachment_document_icon_large">@drawable/ic_document_large_light</item>
+
         <item name="conversation_list_item_background">@drawable/conversation_list_item_background</item>
         <item name="conversation_list_item_contact_color">@color/core_light_90</item>
         <item name="conversation_list_item_subject_color">@color/core_light_60</item>
+        <item name="conversation_list_item_delivery_icon_color">@color/core_light_35</item>
         <item name="conversation_list_item_date_color">@color/core_light_60</item>
         <item name="conversation_list_item_divider">@drawable/conversation_list_divider_shape</item>
 
@@ -141,6 +146,8 @@
         <item name="conversation_background">@color/core_white</item>
         <item name="conversation_editor_background">#22000000</item>
         <item name="conversation_editor_text_color">#ff111111</item>
+        <item name="conversation_input_background_color">@color/core_light_02</item>
+        <item name="conversation_input_outline_color">@color/core_light_10</item>
         <item name="conversation_transport_sms_indicator">@drawable/ic_send_sms_insecure</item>
         <item name="conversation_transport_push_indicator">@drawable/ic_send_push</item>
         <item name="conversation_transport_popup_background">@color/white</item>
@@ -186,6 +193,11 @@
         <item name="conversation_item_update_text_color">@color/core_light_60</item>
         <item name="conversation_item_last_seen_text_color">@color/core_light_90</item>
         <item name="conversation_item_last_seen_line_color">@color/core_light_60</item>
+        <item name="conversation_item_date_line_color">@color/core_light_45</item>
+        <item name="conversation_item_quote_text_color">@color/core_light_90</item>
+        <item name="conversation_item_sticky_date_background_color">@color/core_light_02</item>
+        <item name="conversation_item_sticky_date_text_color">@color/core_light_60</item>
+        <item name="conversation_item_delivery_icon_color">@color/core_light_45</item>
 
         <item name="quick_camera_icon">@drawable/quick_camera_light</item>
         <item name="quick_mic_icon">@drawable/ic_mic_grey600_24dp</item>
@@ -244,7 +256,6 @@
 
     <style name="TextSecure.DarkTheme" parent="@style/Theme.AppCompat">
         <item name="theme_type">dark</item>
-        <item name="attachment_type_selector_background">@color/gray95</item>
         <item name="actionBarStyle">@style/TextSecure.DarkActionBar</item>
         <item name="actionBarTabBarStyle">@style/TextSecure.DarkActionBar.TabBar</item>
         <item name="actionBarPopupTheme">@style/ThemeOverlay.AppCompat.Dark</item>
@@ -258,9 +269,15 @@
         <item name="android:windowBackground">@color/black</item>
         <item name="alertDialogTheme">@style/AppCompatAlertDialogStyleDark</item>
         <item name="android:alertDialogTheme">@style/AppCompatDialogStyleDark</item>
+
+        <item name="attachment_type_selector_background">@color/gray95</item>
+        <item name="attachment_document_icon_small">@drawable/ic_document_small_dark</item>
+        <item name="attachment_document_icon_large">@drawable/ic_document_large_dark</item>
+
         <item name="conversation_list_item_background">@drawable/conversation_list_item_background_dark</item>
         <item name="conversation_list_item_contact_color">#ffdddddd</item>
         <item name="conversation_list_item_subject_color">#ffdddddd</item>
+        <item name="conversation_list_item_delivery_icon_color">@color/core_dark_55</item>
         <item name="conversation_list_item_date_color">#ffdddddd</item>
         <item name="conversation_list_item_divider">@drawable/conversation_list_divider_shape_dark</item>
 
@@ -274,8 +291,13 @@
         <item name="conversation_item_received_text_secondary_color">#b3efefef</item>
         <item name="conversation_item_sent_indicator_text_background">@drawable/conversation_item_sent_indicator_text_shape_dark</item>
         <item name="conversation_item_update_text_color">@color/core_light_35</item>
-        <item name="conversation_item_last_seen_text_color">@color/core_light_02</item>
-        <item name="conversation_item_last_seen_line_color">@color/core_light_10</item>
+        <item name="conversation_item_last_seen_text_color">@color/core_dark_30</item>
+        <item name="conversation_item_last_seen_line_color">@color/core_dark_30</item>
+        <item name="conversation_item_date_line_color">@color/core_dark_55</item>
+        <item name="conversation_item_quote_text_color">@color/core_dark_05</item>
+        <item name="conversation_item_sticky_date_background_color">@color/core_dark_85</item>
+        <item name="conversation_item_sticky_date_text_color">@color/core_dark_30</item>
+        <item name="conversation_item_delivery_icon_color">@color/core_dark_60</item>
 
         <item name="contact_list_divider">@drawable/contact_list_divider_dark</item>
 
@@ -297,6 +319,8 @@
         <item name="conversation_background">@color/black</item>
         <item name="conversation_editor_background">#22ffffff</item>
         <item name="conversation_editor_text_color">#ffeeeeee</item>
+        <item name="conversation_input_background_color">@color/core_dark_85</item>
+        <item name="conversation_input_outline_color">@color/core_dark_70</item>
         <item name="conversation_transport_sms_indicator">@drawable/ic_send_sms_insecure_dark</item>
         <item name="conversation_transport_push_indicator">@drawable/ic_send_push</item>
         <item name="conversation_transport_popup_background">@color/black</item>
