--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -146,8 +146,7 @@
         <item name="conversation_background">@color/core_white</item>
         <item name="conversation_editor_background">#22000000</item>
         <item name="conversation_editor_text_color">#ff111111</item>
-        <item name="conversation_input_background_color">@color/core_light_02</item>
-        <item name="conversation_input_outline_color">@color/core_light_10</item>
+        <item name="conversation_input_background">@drawable/compose_background_light</item>
         <item name="conversation_transport_sms_indicator">@drawable/ic_send_sms_insecure</item>
         <item name="conversation_transport_push_indicator">@drawable/ic_send_push</item>
         <item name="conversation_transport_popup_background">@color/white</item>
@@ -195,7 +194,7 @@
         <item name="conversation_item_last_seen_line_color">@color/core_light_60</item>
         <item name="conversation_item_date_line_color">@color/core_light_45</item>
         <item name="conversation_item_quote_text_color">@color/core_light_90</item>
-        <item name="conversation_item_sticky_date_background_color">@color/core_light_02</item>
+        <item name="conversation_item_sticky_date_background">@drawable/sticky_date_header_background_light</item>
         <item name="conversation_item_sticky_date_text_color">@color/core_light_60</item>
         <item name="conversation_item_delivery_icon_color">@color/core_light_45</item>
 
@@ -295,7 +294,7 @@
         <item name="conversation_item_last_seen_line_color">@color/core_dark_30</item>
         <item name="conversation_item_date_line_color">@color/core_dark_55</item>
         <item name="conversation_item_quote_text_color">@color/core_dark_05</item>
-        <item name="conversation_item_sticky_date_background_color">@color/core_dark_85</item>
+        <item name="conversation_item_sticky_date_background">@drawable/sticky_date_header_background_dark</item>
         <item name="conversation_item_sticky_date_text_color">@color/core_dark_30</item>
         <item name="conversation_item_delivery_icon_color">@color/core_dark_60</item>
 
@@ -319,8 +318,7 @@
         <item name="conversation_background">@color/black</item>
         <item name="conversation_editor_background">#22ffffff</item>
         <item name="conversation_editor_text_color">#ffeeeeee</item>
-        <item name="conversation_input_background_color">@color/core_dark_85</item>
-        <item name="conversation_input_outline_color">@color/core_dark_70</item>
+        <item name="conversation_input_background">@drawable/compose_background_dark</item>
         <item name="conversation_transport_sms_indicator">@drawable/ic_send_sms_insecure_dark</item>
         <item name="conversation_transport_push_indicator">@drawable/ic_send_push</item>
         <item name="conversation_transport_popup_background">@color/black</item>
