--- a/res/drawable/compose_background_light.xml
+++ b/res/drawable/compose_background_light.xml
@@ -5,10 +5,10 @@
 
     <stroke
         android:width="1dp"
-        android:color="?attr/conversation_input_outline_color" />
+        android:color="@color/core_light_10" />
 
     <solid
-        android:color="?attr/conversation_input_background_color" />
+        android:color="@color/core_light_02" />
 
     <corners
         android:radius="20dp" />
