--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -188,7 +188,7 @@
         <item name="conversation_item_sent_text_secondary_color">@color/core_light_60</item>
         <item name="conversation_item_sent_text_indicator_tab_color">#99000000</item>
         <item name="conversation_item_received_text_primary_color">@color/white</item>
-        <item name="conversation_item_received_text_secondary_color">#b3ffffff</item>
+        <item name="conversation_item_received_text_secondary_color">#ffffff</item>
         <item name="conversation_item_update_text_color">@color/core_light_60</item>
         <item name="conversation_item_last_seen_text_color">@color/core_light_90</item>
         <item name="conversation_item_last_seen_line_color">@color/core_light_60</item>
@@ -196,7 +196,7 @@
         <item name="conversation_item_quote_text_color">@color/core_light_90</item>
         <item name="conversation_item_sticky_date_background">@drawable/sticky_date_header_background_light</item>
         <item name="conversation_item_sticky_date_text_color">@color/core_light_60</item>
-        <item name="conversation_item_delivery_icon_color">@color/core_light_45</item>
+        <item name="conversation_item_sent_icon_color">@color/core_light_45</item>
 
         <item name="quick_camera_icon">@drawable/quick_camera_light</item>
         <item name="quick_mic_icon">@drawable/ic_mic_grey600_24dp</item>
@@ -287,7 +287,7 @@
         <item name="conversation_item_sent_text_secondary_color">@color/core_dark_30</item>
         <item name="conversation_item_sent_text_indicator_tab_color">#99ffffff</item>
         <item name="conversation_item_received_text_primary_color">@color/core_dark_05</item>
-        <item name="conversation_item_received_text_secondary_color">#b3efefef</item>
+        <item name="conversation_item_received_text_secondary_color">#efefef</item>
         <item name="conversation_item_sent_indicator_text_background">@drawable/conversation_item_sent_indicator_text_shape_dark</item>
         <item name="conversation_item_update_text_color">@color/core_light_35</item>
         <item name="conversation_item_last_seen_text_color">@color/core_dark_30</item>
@@ -296,7 +296,7 @@
         <item name="conversation_item_quote_text_color">@color/core_dark_05</item>
         <item name="conversation_item_sticky_date_background">@drawable/sticky_date_header_background_dark</item>
         <item name="conversation_item_sticky_date_text_color">@color/core_dark_30</item>
-        <item name="conversation_item_delivery_icon_color">@color/core_dark_60</item>
+        <item name="conversation_item_sent_icon_color">@color/core_dark_60</item>
 
         <item name="contact_list_divider">@drawable/contact_list_divider_dark</item>
 
