--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -136,6 +136,7 @@
         <item name="conversation_list_item_subject_color">@color/core_light_60</item>
         <item name="conversation_list_item_delivery_icon_color">@color/core_light_35</item>
         <item name="conversation_list_item_date_color">@color/core_light_60</item>
+        <item name="conversation_list_item_unread_color">@color/core_black</item>
         <item name="conversation_list_item_divider">@drawable/conversation_list_divider_shape</item>
 
         <item name="fab_color">@color/textsecure_primary</item>
@@ -278,6 +279,7 @@
         <item name="conversation_list_item_subject_color">#ffdddddd</item>
         <item name="conversation_list_item_delivery_icon_color">@color/core_dark_55</item>
         <item name="conversation_list_item_date_color">#ffdddddd</item>
+        <item name="conversation_list_item_unread_color">@color/core_white</item>
         <item name="conversation_list_item_divider">@drawable/conversation_list_divider_shape_dark</item>
 
         <item name="conversation_group_member_name">#99ffffff</item>
