Make libpaste a source dependency.

--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -60,4 +60,6 @@
 
     <color name="MediaOverview_Media_selected_overlay">#88000000</color>
 
+    <color name="logsubmit_confirmation_background">#44ff2d00</color>
+
 </resources>
