--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -140,6 +140,7 @@
         <item name="conversation_list_item_unread_background">@drawable/unread_count_background_light</item>
         <item name="conversation_list_item_divider">@drawable/conversation_list_divider_shape</item>
         <item name="conversation_list_toolbar_background">@color/core_blue</item>
+        <item name="conversation_list_typing_tint">@color/core_grey_60</item>
 
         <item name="fab_color">@color/textsecure_primary</item>
         <item name="lower_right_divet">@drawable/divet_lower_right_dark</item>
@@ -290,6 +291,7 @@
         <item name="conversation_list_item_unread_background">@drawable/unread_count_background_dark</item>
         <item name="conversation_list_item_divider">@drawable/conversation_list_divider_shape_dark</item>
         <item name="conversation_list_toolbar_background">@color/core_grey_90</item>
+        <item name="conversation_list_typing_tint">@color/core_white</item>
 
         <item name="conversation_group_member_name">#99ffffff</item>
 
