--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -35,6 +35,11 @@
     <dimen name="media_bubble_min_height">100dp</dimen>
     <dimen name="media_bubble_max_height">320dp</dimen>
 
+    <dimen name="media_picker_folder_width">175dp</dimen>
+    <dimen name="media_picker_item_width">85dp</dimen>
+
+    <dimen name="mediasend_progress_dialog_size">120dp</dimen>
+
     <dimen name="conversation_compose_height">40dp</dimen>
     <dimen name="conversation_individual_right_gutter">16dp</dimen>
     <dimen name="conversation_individual_left_gutter">16dp</dimen>
