--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -197,6 +197,10 @@
         <item name="android:textColor">@color/signal_primary</item>
     </style>
 
+    <style name="Button.Borderless.Registration" parent="Base.Widget.AppCompat.Button.Borderless">
+        <item name="android:textColor">@color/core_grey_60</item>
+    </style>
+
     <!-- RedPhone -->
 
     <!-- Buttons in the main "button row" of the in-call onscreen touch UI. -->
