Added ability to receive long messages.
Send support is in here too. We'll enable it in a future release after
enough people have updated.

--- a/res/values/attrs.xml
+++ b/res/values/attrs.xml
@@ -236,6 +236,7 @@
 
     <declare-styleable name="EmojiTextView">
         <attr name="scaleEmojis" format="boolean" />
+        <attr name="emoji_maxLength" format="integer" />
     </declare-styleable>
 
     <declare-styleable name="RingtonePreference">
