--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -173,6 +173,8 @@
         <item name="android:padding">2dp</item>
         <item name="android:background">@null</item>
         <item name="android:maxLines">4</item>
+        <!-- TODO: Switch to 64kb to enable long message sending. -->
+        <!--<item name="android:maxLength">65536</item>-->
         <item name="android:maxLength">2000</item>
         <item name="android:textColor">?conversation_item_sent_text_primary_color</item>
         <item name="android:capitalize">sentences</item>
