Switch gallery to permanent dark theme.

--- a/res/drawable-v21/media_camera_button_background.xml
+++ b/res/drawable-v21/media_camera_button_background.xml
@@ -10,7 +10,7 @@
     </item>
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/core_grey_05" />
+            <solid android:color="@color/core_white" />
         </shape>
     </item>
 </ripple>
