Prevent landscape text editing from taking over the screen.
It used to be that we let Android do the default behavior of
full-screening the EditText when in landscape, but honestly I
don't know who prefers that. So I've turned it off.

Fixes #8769

--- a/res/layout/mediasend_fragment.xml
+++ b/res/layout/mediasend_fragment.xml
@@ -42,6 +42,7 @@
                 style="@style/Signal.Text.Body"
                 android:maxLines="3"
                 android:maxLength="240"
+                android:imeOptions="flagNoExtractUi"
                 android:hint="@string/MediaSendActivity_add_a_caption"
                 android:autoText="true"
                 android:inputType="textAutoCorrect|textCapSentences|textMultiLine"
@@ -96,6 +97,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
+                        android:imeOptions="flagNoExtractUi"
                         android:nextFocusForward="@+id/send_button"
                         android:nextFocusRight="@+id/send_button"
                         tools:hint="Send TextSecure message" >
